fixed alignemtn for phone services

--- a/main.css
+++ b/main.css
@@ -62,7 +62,6 @@ h2.service {
 	text-align: center;
 	flex: 50%;
 	float: left;
-	padding-left: 4rem;
 }
 
 h5 {
